<resources>

    <string name="app_name">UR Dashboard</string>

    <string name="action_open_udacity_website">Open Udacity website</string>
    <string name="action_open_settings">Settings</string>

    <!-- Queue Settings (read only) -->
    <string name="srs_label">Current queue settings (read only)</string>
    <string name="srs_queue_status_label">Status</string>
    <string name="srs_queue_on_label">Queue On</string>
    <string name="srs_queue_off_label">Queue Off</string>
    <string name="srs_queue_validity_time_label">Request validity time</string>
    <string name="srs_queue_last_text">(%1d h %2d min)</string>
    <string name="srs_queue_last_text_only_min">(%d min)</string>
    <string name="srs_queueing_mode_label">Queueing mode</string>
    <string name="srs_queue_for_one_review_label">One review</string>
    <string name="srs_queue_for_full_label">Keep my queue full</string>
    <string name="srs_projects_label">Projects</string>

    <!-- Token -->
    <string name="st_label">Udacity API key</string>
    <string name="st_token_expires_text">Token expires in %2$d days (%1$s)</string>
    <string name="st_token_inactive">TOKEN INACTIVE</string>
    <string name="st_update_token_button_label">Update token now</string>

    <string name="dit_update_token_title">Update Reviewer token</string>
    <string name="dit_desc">Insert the token to get the information from Udacity Mentorship Dashboard.</string>
    <string name="dit_warning">This app is not compatible with the key you can get via \"API Access\" button from the previous Reviewer Dashboard.</string>
    <string name="dit_api_key_edit_hint">New Dashboard API key</string>
    <string name="dit_update_button">Update token</string>
    <string name="dit_scan_qr_code">Scan QR</string>
    <string name="dit_cancel_button">Cancel</string>
    <string name="dit_token_incorrect_or_expired">Token incorrect or expired</string>

    <!-- Request JSON -->
    <string name="srj_title">JSON Details</string>
    <string name="srj_request_id_label">Request id:</string>
    <string name="srj_created_label">Created:</string>
    <string name="srj_close_label">Close:</string>
    <string name="srj_updated_label">Updated:</string>

    <!-- Settings -->
    <string name="settings_activity_title">Settings</string>

    <string name="as_interval_label">Update frequency</string>
    <string name="as_interval_default_text">Select interval value</string>

    <string name="as_new_assign_subhead">New Assignments</string>
    <string name="as_notify_new_assign_title">Notify about new assignments</string>
    <string name="as_notify_new_assign_details">Get the info when the new review is coming</string>
    <string name="as_notification_sound_new_assignment">New assignment notification sound</string>

    <string name="as_incorrect_request_subhead">Request Issues</string>
    <string name="as_notify_request_inconsistency_title">Notify about request inconsistency</string>
    <string name="as_notify_request_inconsistency_details">Get the info when submission request seem incorrect</string>
    <string name="as_notification_sound_request_inconsistency">Request issue notification sound</string>

    <string name="as_price_changes_subhead">Price Changing</string>
    <string name="as_notify_price_changes_title">Notify about price changes</string>
    <string name="as_notify_price_changes_details">Get the info when the reward for project drops or rises</string>
    <string name="as_notification_sound_price_changes">Price change notification sound</string>

    <string name="as_auto_refresh_subhead">Auto refresh</string>
    <string name="as_auto_refresh_title">Automatically refresh requests</string>
    <string name="as_auto_refesh_details">Have your submission requests refreshed by the app. (experimental)</string>

    <string name="select_notification_sound">Select sound</string>


    <!-- Commons -->
    <string name="price_text">$%.2f</string>

    <!-- Notifications -->
    <string name="n_new_reviews_title">New assignment!</string>
    <string name="n_new_reviews_text">You have new submission(s) to review</string>
    <string name="n_price_changes_title">Price changed</string>
    <string name="n_price_changes_text">There are new compensations for reviews</string>
    <string name="n_incorrect_request_title">Inconsistent request</string>
    <string name="n_incorrect_request_text">The submission requests may be incorrect</string>

</resources>
