<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/am_api_key_sheet_layout"
    style="@style/AppTheme.Sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.TextView.Subhead.Colored"
        android:text="@string/st_label" />

    <TextView
        android:id="@+id/st_token_expires_date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:text="@string/st_token_expires_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <View style="@style/AppTheme.Separator.Horizontal" />

    <Button
        android:id="@+id/st_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="end"
        android:text="@string/st_update_token_button_label"
        android:layout_marginEnd="@dimen/padding_small"/>

</LinearLayout>