<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/padding_small"
    android:paddingLeft="@dimen/padding_normal"
    android:paddingRight="@dimen/padding_normal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/single_request_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ri_index"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/single_request_no_bg"
        android:gravity="center"
        tools:text="No" />

    <TextView
        android:id="@+id/ri_id_label"
        style="@style/AppTheme.TextView.JsonDetails.Label"
        android:text="@string/srj_request_id_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ri_index" />

    <TextView
        android:id="@+id/ri_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ri_id_label"
        app:layout_constraintTop_toTopOf="@id/ri_id_label"
        tools:text="2000000" />

    <TextView
        android:id="@+id/ri_created_label"
        style="@style/AppTheme.TextView.JsonDetails.Label"
        android:text="@string/srj_created_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ri_id_label" />

    <TextView
        android:id="@+id/ri_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ri_created_label"
        app:layout_constraintTop_toTopOf="@id/ri_created_label"
        tools:text="2018-02-14 4:41" />

    <TextView
        android:id="@+id/ri_updated_label"
        style="@style/AppTheme.TextView.JsonDetails.Label"
        android:text="@string/srj_updated_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ri_created_label" />

    <TextView
        android:id="@+id/ri_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ri_updated_label"
        app:layout_constraintTop_toTopOf="@id/ri_updated_label"
        tools:text="2018-02-15 6:00" />

    <TextView
        android:id="@+id/ri_close_label"
        style="@style/AppTheme.TextView.JsonDetails.Label"
        android:text="@string/srj_close_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ri_updated_label" />

    <TextView
        android:id="@+id/ri_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ri_close_label"
        app:layout_constraintTop_toTopOf="@id/ri_close_label"
        tools:text="2018-02-15 18:00" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/ri_projects_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="32dp"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingStart="32dp"
        android:paddingTop="@dimen/padding_normal"
        app:layout_constraintTop_toBottomOf="@id/ri_close_label" />

</android.support.constraint.ConstraintLayout>